--- a/css/animation.css
+++ b/css/animation.css
@@ -68,3 +68,48 @@
      transform: translateY(0%);
  }
 }
+ /******************************\
+ appear
+ \******************************/
+ @keyframes appear
+ {
+     0%{
+         transform: translateY(-50%);
+         opacity: 0;
+         
+     }
+     100%{
+         transform: translateY(0%);
+         opacity: 1;
+     }
+ }
+ @keyframes rotation
+ {
+     0%{
+         transform: rotate(180deg);
+     }
+     100%{
+         transform: rotate(0deg);
+     }
+ }
+ @-webkit-keyframes slide-left {
+     0% {
+       -webkit-transform: translateX(0);
+               transform: translateX(0);
+     }
+     100% {
+       -webkit-transform: translateX(-82px);
+               transform: translateX(-82px);
+     }
+   }
+   @keyframes slide-left {
+     0% {
+       -webkit-transform: translateX(0);
+               transform: translateX(0);
+     }
+     100% {
+       -webkit-transform: translateX(-82px);
+               transform: translateX(-82px);
+     }
+   }
+ 
