--- a/css/mbrestaurants.css
+++ b/css/mbrestaurants.css
@@ -80,7 +80,7 @@
      border-radius: 20px;
      background-color: white;
      display: flex;
-     justify-content: space-around;
+     justify-content: space-between;
      align-items: center;
      margin-bottom: 30px;   
      margin-left: auto;
@@ -89,6 +89,7 @@
      animation: appear 3s;
      overflow: hidden;
      min-width: 250px;
+     padding-left: 55px;
      
      
  }
@@ -161,7 +162,6 @@
      position: relative;
      left: -24px;
      top:1px;
-     
      background-image: linear-gradient(to top,#9356DC,#FF79DA );
      background-clip: text;
      -webkit-background-clip:text;
@@ -231,15 +231,17 @@
     
      -webkit-animation: slide-left 0.5s ease-in-out both;
      animation: slide-left 0.5s ease-in-out both;
-     
+     margin-right: 0px;
  }
+ 
  .conteneur_price_slide
  {
      display: flex;
      align-items: center;
      justify-content: space-between;
      width: 130px;
-     margin-right: -97px;
+     margin-right: -90px;
+     
      
      
  }
