--- a/css/mbrestaurants.css
+++ b/css/mbrestaurants.css
@@ -76,21 +76,19 @@
  .menu
  {
      height: 80px;
-     width: 380px;
+     width: 355px;
      border-radius: 20px;
      background-color: white;
      display: flex;
-     justify-content: space-between;
+     padding-left: 20px;
      align-items: center;
      margin-bottom: 30px;   
      margin-left: auto;
      margin-right: auto;
      box-shadow: 6px 6px 6px 6px #e4e0e0;
      animation: appear 3s;
-     overflow: hidden;
      min-width: 250px;
-     padding-left: 55px;
-     
+     overflow: hidden;
      
  }
  .menu:hover
@@ -100,16 +98,27 @@
  }
  .menu:hover i
  {
-     animation: rotation 0.6s;
+     animation: rotation 100ms;
  }
  
  .conteneur_titledescription
  {
-     width: 80%;
+     width: 75%;
      height: 50px;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
+     text-overflow: ellipsis;
+     white-space: nowrap;
+     overflow: hidden;
+    
+
+ }
+ h2, h3 
+ {
+    text-overflow: ellipsis;
+     white-space: nowrap;
+     overflow: hidden; 
  }
  
  .coeur
@@ -162,6 +171,7 @@
      position: relative;
      left: -24px;
      top:1px;
+     
      background-image: linear-gradient(to top,#9356DC,#FF79DA );
      background-clip: text;
      -webkit-background-clip:text;
@@ -231,16 +241,16 @@
     
      -webkit-animation: slide-left 0.5s ease-in-out both;
      animation: slide-left 0.5s ease-in-out both;
-     margin-right: 0px;
+     margin: 0;
+     
  }
- 
  .conteneur_price_slide
  {
      display: flex;
      align-items: center;
      justify-content: space-between;
-     width: 130px;
-     margin-right: -90px;
+     width: 165px;
+     margin-right: -97px;
      
      
      
@@ -249,7 +259,7 @@
  {
      background-color: #99E2D0;
      height: 80px;
-     width: 80px;
+     width: 70px;
      border-radius: 0px 20px 20px 0px;
      display: flex;
      align-items: center;
@@ -257,6 +267,12 @@
      color: #99E2D0;
      
  
+ }
+ .price
+ {
+    display: flex;
+    justify-content: flex-end;
+    width: 60px;
  }
  
  .slide-left i
