--- a/css/desktoprestaurant.css
+++ b/css/desktoprestaurant.css
@@ -91,12 +91,13 @@ h1
     border-radius: 15px;
     background-color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;   
     box-shadow: 6px 6px 6px 6px #e4e0e0;
     animation: appear 3s;
     overflow: hidden;  
+    padding-left: 30px;
    
 }
 
@@ -181,7 +182,7 @@ h1
    
     -webkit-animation: slide-left 0.4s ease-in-out both;
     animation: slide-left 0.4s ease-in-out both;
-    
+    margin: 0;
     
 }
 .conteneur_price_slide
@@ -190,7 +191,8 @@ h1
     align-items: center;
     justify-content: space-between;
     width: 130px;
-    margin-right: -115px;
+    margin-right: -90px;
+    
     
     
 }
@@ -221,7 +223,7 @@ h1
 }
 .menu:hover i
 {
-    animation: rotation 0.5s;
+    animation: rotation 100ms;
 }
 
 
