--- a/css/mbrestaurants.css
+++ b/css/mbrestaurants.css
@@ -76,7 +76,7 @@
  .menu
  {
      height: 80px;
-     width: 360px;
+     width: 370px;
      border-radius: 20px;
      background-color: white;
      display: flex;
@@ -98,7 +98,7 @@
  }
  .menu:hover i
  {
-     animation: rotation 100ms;
+     animation: rotation 600ms;
  }
  
  .conteneur_titledescription
@@ -116,11 +116,17 @@
  }
  h2, h3 
  {
-    text-overflow: ellipsis;
+     text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden; 
  }
- 
+
+  .menu:hover .conteneur_titledescription
+ {
+     transition: 400ms ease-in-out ;
+     width: 220PX;
+     
+ }
  .coeur
  {
      display: flex;
@@ -241,7 +247,7 @@
     
      -webkit-animation: slide-left 0.5s ease-in-out both;
      animation: slide-left 0.5s ease-in-out both;
-     margin: 0;
+     margin-left: 35px;
      
  }
  .conteneur_price_slide
@@ -250,7 +256,7 @@
      align-items: center;
      justify-content: space-between;
      width: 165px;
-     margin-right: -97px;
+     margin-right: -80px;
      
      
      
