--- a/css/mobilefirstacceuil.css
+++ b/css/mobilefirstacceuil.css
@@ -387,3 +387,89 @@ margin: 0px;
      left: 285px; 
     }
   }
+  /* ***************************** BLOC NOUVEAU  1 & 2 **************************** */
+/* Calibrage bloc "nouveau" accueil pour Iphone xr samsung s20 ultra et galaxy A51/71 */
+@media screen and (max-width:414px)
+{
+    .Nouveau_bloc2
+    {
+        position: absolute;
+        right: 35px;
+        bottom: -480px;
+    }
+    .Nouveau_bloc
+    {
+        position: absolute;
+        right: 35px;
+        bottom: -60px;
+    }
+
+}
+/* Calibrage bloc "nouveau" accueil pour Iphone 12 pro et pixel 5 */
+@media screen and (max-width:393px)
+{
+    .Nouveau_bloc2
+    {
+        position: absolute;
+        right: 35px;
+        bottom: -530px;
+    }
+    .Nouveau_bloc
+    {
+        position: absolute;
+        right: 35px;
+        bottom: -120px;
+    }
+
+}
+
+/* Calibrage bloc "nouveau" accueil pour Iphone SE*/
+
+@media screen and (max-width:375px)
+{
+    .Nouveau_bloc2
+    {
+        position: absolute;
+        right: 25px;
+        bottom: -710px;
+    }
+    .Nouveau_bloc
+    {
+        position: absolute;
+        right: 25px;
+        bottom: -290px;
+    }
+}
+/* Calibrage bloc "nouveau" accueil pour galaxy s8 */
+@media screen and (max-width:360px)
+{
+    .Nouveau_bloc2
+    {
+        position: absolute;
+        right: 25px;
+        bottom: -650px;
+    }
+    .Nouveau_bloc
+    {
+        position: absolute;
+        right: 25px;
+        bottom: -220px;
+    }
+}
+/* Calibrage bloc "nouveau" accueil pour galaxy fold */
+@media screen and (max-width:280px)
+{
+    .Nouveau_bloc2
+    {
+        position: absolute;
+        right: 55px;
+        bottom: -730px;
+    }
+    .Nouveau_bloc
+    {
+        position: absolute;
+        right: -100px;
+        bottom: -320px;
+    }
+}
+
