--- a/css/mobilefirstrestaurants.css
+++ b/css/mobilefirstrestaurants.css
@@ -76,7 +76,7 @@
  .menu
  {
      height: 80px;
-     width: 370px;
+     max-width: 425px;
      border-radius: 20px;
      background-color: white;
      display: flex;
