--- a/css/mobilefirstrestaurants.css
+++ b/css/mobilefirstrestaurants.css
@@ -296,3 +296,10 @@
    border-radius: 20px;
   
  }
+ @media screen and (max-width:375px) 
+ {
+     .menu
+     {
+         font-size: 0.9em;
+     }
+ }
