--- a/css/desktopaccueil.css
+++ b/css/desktopaccueil.css
@@ -146,17 +146,21 @@ h1
 {
     margin: auto;
     height: 80px;
-    width: 300px;
+    width: 280px;
     background-color: #F7F7F7;
     border-radius: 25px ;
     box-shadow: 6px 6px 6px #F2F2F2;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     cursor: pointer;
    
    
 
+}
+.Carte_icone
+{
+    margin-right: 15px;
 }
 
 .Carte_choisissez:hover
@@ -182,7 +186,7 @@ h1
     justify-content: center;
     align-items: center;
     position: relative;
-    left: -30px;
+    left: -15px;
 }
 
 /* Section_restaurants */
