--- a/css/mobilefirstacceuil.css
+++ b/css/mobilefirstacceuil.css
@@ -132,17 +132,23 @@ h1
 {
     margin: auto;
     height: 80px;
-    width: 350px;
+    width: 330px;
     background-color: #F7F7F7;
     border-radius: 25px ;
     box-shadow: 6px 6px 6px #F2F2F2;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     cursor: pointer;
-   
-   
+     
 }
+
+.Carte_icone
+{
+    
+    margin-right: 15px;
+}
+
 
 .Carte_choisissez:hover
 {
@@ -167,7 +173,7 @@ h1
     justify-content: center;
     align-items: center;
     position: relative;
-    left: -35px;
+    left: -15px;
 }
 
 /* Section_restaurants */
