--- a/css/mobilefirstrestaurants.css
+++ b/css/mobilefirstrestaurants.css
@@ -305,32 +305,28 @@ body
  {
      .conteneur_titledescription
      {
-         font-size: 0.8em;
+         font-size: 0.9em;
          width: 77%;
-         
         
      }
-     .menu
-     {
-         padding-left: 5px;
-     }
+
      
 
  }
 
  @media screen and (max-width:280px) 
  {
-   .conteneur_price_slide
-   {
-       width: 120px;
-
-   }
+   
    .conteneur_titledescription
    {
-       font-size: 0.8em;
+      
        width: 76%;
        
       
    }
-
+ 
+   .slide-left
+   {
+       width: 60px;
+   }
  }
