--- a/css/mobilefirstrestaurants.css
+++ b/css/mobilefirstrestaurants.css
@@ -301,17 +301,7 @@ body
   
  }
  
-
- @media screen and (max-width:280px) 
- {
-   
-   .conteneur_titledescription
-   {
-      
-   
-     font-size: 0.8em;
-      
-   }
- 
-  
- }
+.title_bbottom
+{
+    border: 3px solid #99E2D0;
+}
