--- a/css/desktoprestaurant.css
+++ b/css/desktoprestaurant.css
@@ -116,9 +116,16 @@ h1
     white-space: nowrap;
 
 }
+.line-t
+{
+    border: 1px solid #99E2D0;
+    width: 60px;
+    margin-bottom: 15px;
+}
 .title_entree
  {
      font-weight: 400;
+     margin-bottom: 2px;
  }
 .title_epd
 {
