--- a/css/mobilefirstrestaurants.css
+++ b/css/mobilefirstrestaurants.css
@@ -66,6 +66,8 @@ body
      background-color: #f2f2f2;
      border-radius: 30px 30px 0px 0px;
      padding-bottom: 30px; 
+     padding-left: 10px;
+     padding-right: 10px;
       
  }
  h1
@@ -134,10 +136,7 @@ body
      width: 220PX;
      
  }
- .bloc-titre
- {
-     margin-left: 5px;
- }
+
  .line-t
  {
      border: 1px solid #99E2D0;
