--- a/css/mobilefirstacceuil.css
+++ b/css/mobilefirstacceuil.css
@@ -237,6 +237,18 @@ h1
 .new::before
 {
     content: "Nouveau";
+    position: absolute;
+    height: 2rem;
+    width: 5rem;
+    background-color: #99E2D0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    top: 1rem;
+    right: 1rem;
+    font-weight: bold;
+    color: green;
 }
 .has i:hover
 {
